--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,8 @@ body{
 .container-fluid{
     padding-left: 0px;
     padding-right: 0px;
+    margin-left: 0px;
+    margin-right: 0px;
     
 }
 
@@ -46,7 +48,7 @@ figure{
 
 
 .personal-info {
-    height: 695px;;
+    
     padding-top: 3%;
     padding-left: 10%;
     padding-right: 10%;
@@ -88,9 +90,38 @@ figure{
     padding-right: 30px;
 }
 
+/* ----------------------------------------Footer */
 
+.footer{
+    position: relative;
+    background-color: rgb(245, 245, 245);
+    text-align: center;
+    letter-spacing: 1px;
+    font-size: 5px;
+    padding: 25px 40px 5px;
+    margin: 50px -40px 0;
+}
 
+.footer-text {
+    font-size: 2em;
+    font-weight: 100;
+    text-align: center;
+}
 
+.footer a {
+    color: #222222;
+}
+
+.social-list{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    padding-bottom: 10px;
+}
+
+.social-list > li {
+    display: inline-block;
+}
 
 
 /* ----------------------------------------Media Queries */
