--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,54 @@ body{
     margin-bottom: 0%;
 }
 
+/* ----------------------------------------Portfolio Page */
+
+.menu-color-ui{
+    background-color: #555555;
+}
+.menu-color-ux{
+    background-color: #555555;
+}
+.menu-color-code{
+    background-color: #555555;
+}
+.menu-color-other{
+    background-color: #555555;
+}
+
+.list-inline-item:not(:last-child) {
+    margin-right: 0;
+}
+.menucontainer {
+    font-size: 0;
+}
+
+#nav li{
+    font-size: 14px;
+    padding: 0;
+}
+
+.menu-item {
+    height: 120px;
+    text-align: center;
+    padding: 0;
+}
+
+.menu-item a {
+    width: 100%;
+    text-decoration: none;
+    color: #fff;
+    height: 120px;
+}
+
+.menu-item span {
+    display: block;
+    width: 100%;
+    padding-top: 50px;
+    text-align: center;
+    font-size: 15px;
+    font-weight: 300;
+}
 
 /* ----------------------------------------Footer */
 
