--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,6 +191,15 @@ body{
     font-weight: 300;
 }
 
+/* ----------------------------------------Hover.css */
+
+.hvr-sweep-to-bottom:before {
+    background: rgba(0,0,0,0.2);
+    height: 120px;
+
+}
+
+
 /* ----------------------------------------Footer */
 
 .footer{
