--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -199,6 +199,23 @@ body{
     font-weight: 300;
 }
 
+/* ----------------------------------------About Page */
+
+.about-info-container {
+    padding-left: 8%;
+    padding-right: 10%;
+    text-align: center;
+}
+
+.about-info-container, h1{
+    font-size: large;
+}
+
+.about-info-container, p{
+    font-weight: 200;
+    font-size: medium;
+}
+
 /* ----------------------------------------Contact Page */
 
 .form-container{
