--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,6 +252,21 @@ body{
     margin-top: -22px;
 }
 
+.project-list {
+    justify-content: space-between;
+    padding-bottom: 35px;
+    margin-left: 0px;
+}
+
+/* image border styling from https://www.w3schools.com/howto/howto_css_border_image.asp */
+.timeline-event{
+    border: 5px solid #fff;
+    border-radius: 50%;
+    box-shadow: 0 1px 5px 0 #c4c2c2;
+    margin-right: 5px;
+    margin-left: 5px;
+    transition: box-shadow 300ms ease, transform 300ms ease, -webkit-transform 300ms ease;
+}
 
 
 /* ----------------------------------------Contact Page */
