--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -268,6 +268,20 @@ body{
     transition: box-shadow 300ms ease, transform 300ms ease, -webkit-transform 300ms ease;
 }
 
+.tab-active {
+    display: block;
+}
+
+.ai-work-thumb {
+    height: 150px;
+    margin-top: 4px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-image: url(#);
+    background-position: 0px 0px;
+    background-size: cover;
+}
+
 
 /* ----------------------------------------Contact Page */
 
