--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -277,11 +277,34 @@ body{
     margin-top: 4px;
     border: 1px solid #ddd;
     border-radius: 5px;
-    background-image: url(#);
     background-position: 0px 0px;
     background-size: cover;
 }
 
+.timeline-year {
+    position: relative;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 auto;
+    -ms-flex: 0 auto;
+    flex: 0 auto;
+    color: #636363;
+    font-size: 10px;
+    line-height: 15px;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.project-title {
+    margin-top: 10px;
+    font-size: 16px;
+    line-height: 26px;
+    font-weight: 300;
+}
+
+.project-title-text  {
+    text-align: justify;
+    font-size: 15px;
+}
 
 /* ----------------------------------------Contact Page */
 
