Add uct logo to assets

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,7 +317,7 @@ body{
     -webkit-box-align: center;
     -webkit-box-flex: 0;
     flex: 0 0 auto;
-    border: 1px solid #bfbfbf;
+    border: 1px solid #706d6d;
     border-radius: 35px;
     background-color: #fff;
 }
