--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,28 @@ body {
 
 /* ----------------------------------------Hero Image */
 
+.hero-image-mobile {
+    background-color: #cccccc;
+    height: 400px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    padding-top: 0%;
+    margin-left: 0%;
+}
+
+@media screen and (min-width:700px) { 
+    .hero-image-mobile {
+        background-size: 60% ;
+        background-color: #fff;
+    } 
+} 
+
+@media screen and (min-width:990px) { 
+    .hero-image-mobile {display: none;} 
+} 
+
 .hero-image {
     display: none;
     background-position: 50% 0;
@@ -72,53 +94,104 @@ body {
     margin: 0 0 0 30px;
 }
 
+/*To place content on right hand side of page*/
+@media (min-width: 992px){
+.personal-content {
+    float: right;
+}
+}
+@media (min-width: 992px){
+.hero-image, .personal-content {
+    width: 50%;
+}
+}
 
+/* ----------------------------------------Home page */
 
-.container-fluid{
-    padding-left: 0px;
+.personal-content {
+    padding-top: 70px;
+    padding-bottom: 0px;
     padding-right: 0px;
-    margin-left: 0px;
-    margin-right: 0px;
-    
+    padding-left: 0px;
 }
 
-/* ----------------------------------------Nav Bar */
-
-.navbar-toggler {
-    padding-right: 20%;
+.personal-section {
+    background-color: #ffffff;
+    background-position: 50% 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+    padding-top: 0px;
+    padding-right: 0px;
+    padding-bottom: 10px;
+    padding-left: 0px;
 }
 
-
-/* ----------------------------------------Hero Image */
-
-.figure{
-    padding-bottom: 1%;
+@media (min-width: 992px){
+    .personal-content{
+        padding-top: 10%;
+        padding-right: 0px;
+        padding-left: 5%;
+    }
 }
 
-/* ----------------------------------------Personal Info Page */
-
-
-.personal-info-container {
-    padding-left: 8%;
-    padding-right: 10%;
-    text-align: center;
+.personal-content-container{
+    padding-top: 5%;
 }
 
-.personal-info-container, h1{
-    font-size: large;
+.container-custom {
+    max-width: 768px;
 }
 
-.personal-info-container, p{
-    font-weight: 200;
-    font-size: medium;
+.container-fluid {
+    padding-right: 15px;
+    padding-left: 15px;
+    margin-right: auto;
+    margin-left: auto;
 }
 
- /* original code credit for bullets: https://austinknight.com/ */
+.row {
+    margin-right: -15px;
+    margin-left: -15px;
+}
+
+@media (min-width: 300){
+.col-sm-12 {
+    width: 100%;
+}
+}
+
+h1, .h1 {
+    font-size: 25px;
+    color: #1f1e1e;
+    letter-spacing: 1px;
+}
+
+h1, .about-heading {
+    padding-right: 5%;
+    padding-left: 0%;
+}
+
+@media screen and (min-width:700px) { 
+    .h1, .about-heading {
+        text-align: center;
+    } 
+} 
+
+@media screen and (min-width:990px) { 
+    .h1, .about-heading {
+        text-align: left;
+    } 
+} 
+
+/* To style bullets */
+/* original code credit for bullets: https://austinknight.com/ */
 .bullet {
     display: flex;
     padding-bottom: 10px;
     -webkit-box-align: start;
     align-items: flex-start;
+    
 }
 
 .bullet-icon{
@@ -141,29 +214,52 @@ body {
     color: #636363;
     font-size: 14px;
     font-weight: 300;
-    padding-right: 30px;
+    padding-right: 10px;
     font-family: 'Poppins', sans-serif;
 }
 
-/* Original Code from https://www.w3schools.com/css/css3_buttons.asp */
-.btn-container {
-    position: relative;
+/*To style button content */
+.about-btn-container{
+    padding-left: 32%;
+    padding-top: 2%;
+    padding-bottom: 2%;
 }
 
-#about-btn{
-    background-color: white;
-    color: black;
-    border: 2px solid #555555;
+@media (min-width: 700px){
+.about-btn-container {
+    padding-left: 40%;
+    padding-right: 35%;
+    padding-top: 5%;
+}
+}
+
+@media (min-width: 990px){
+.about-btn-container {
+    padding-left: 35%;
+    padding-right: 0%;
+    padding-top: 5%;
+}
+}
+
+.list-group-item-secondary {
+    color: #fff;
+    background-color: #316879;
+    border: 1px solid rgba(0,0,0,.125);
+    
+}
+
+.list-group .list-group-item:last-child {
     border-radius: 8px;
 }
 
-#about-btn:hover {
-    background-color: #555555;
-    color: white;
+.list-group-item-secondary:hover{
+    background-color: #70888f;
+    color: #ffff;
 }
 
+/* To style home page quote */
 .quote-container {
-    padding-top: 5%;
+    padding-top: 0%;
     padding-bottom: none;
     margin-bottom: 0;
     font-size: x-small;
@@ -175,6 +271,13 @@ body {
     padding-bottom: 1%;
     margin-bottom: 0%;
 }
+
+@media (max-width: 600px){
+    .quote-container{
+        display: none;
+}
+}
+
 
 /* ----------------------------------------Portfolio Page */
 
