--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -278,6 +278,34 @@ h1, .about-heading {
 }
 }
 
+.hero-image-footer-mobile {
+    position: relative;
+    bottom: 0;
+    width: 100%;
+    padding-right: 0px;
+    padding-left: 0px;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    text-align: center;
+    color: #636363;
+}
+
+.hero-image-footer-mobile .social-list > li > a { 
+    color: #636363;
+}
+
+@media (min-width: 990px){
+    .hero-image-footer-mobile{
+        padding-top: 0px;
+}
+}
+
+@media (min-width: 990px){
+    .hero-image-footer-mobile{
+        display: none;
+}
+}
+
 
 /* ----------------------------------------Portfolio Page */
 
@@ -557,7 +585,6 @@ h1, .about-heading {
     padding-top: 2%;
 }
 
-
 #contact-btn{
     background-color: #316879;
     color: #fff;
@@ -575,79 +602,6 @@ h1, .about-heading {
     height: 120px;
 }
 
-
-/* ----------------------------------------Footer */
-
-.footer{
-    position: relative;
-    background-color: #e6e6e6;
-    width: 100%;
-    margin-top: 2%;
-    text-align: center;
-    letter-spacing: 1px;
-    font-size: 15px;
-    padding: 5% 10% 5% 17%;
-}
-
-.footer-container{
-    position: relative;
-    display: block;
-    margin-right: auto;
-    margin-left: auto;
-    padding-right: 25px;
-    padding-left: 25px;
-    clear: none;
-}
-
-.footer-text {
-    font-weight: 100;
-    font-size: x-small;
-}
-
-.footer a {
-    color: #222222;
-    -webkit-tap-highlight-color: rgba(0,0,0,0);
-    padding-top: 3px;
-    border-width: 5px;
-    color: #676767;
-    line-height: 18px;
-    text-decoration: none;
-    padding-left: 10px;
-}
-
-.linkedin {
-    max-width: 25px;
-    margin-right: 20px;
-    float: right;
-    opacity: 1;
-    transition: opacity 400ms ease;
-}
-
-.inline-block{
-    display: inline-block;
-}
-
-.social-list{
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    padding-bottom: 10px;
-}
-
-.social-list > li {
-    display: inline-block;
-}
-
-.copyright {
-    color: #676767;
-    font-size: small;
-    padding-bottom: 10px;
-}
-
-.copyright-icon{
-    margin-right: 5px;
-    font-family: 'Poppins', sans-serif;;
-}
 
 
 /* ----------------------------------------Media Queries */
