--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,7 @@ body {
 
 .hero-image {
     display: none;
-    background-position: 50% 0;
+    background-position: 50% 0px;
     background-color: #222222;
     
 }
@@ -57,19 +57,19 @@ body {
 @media (min-width: 992px){
 .hero-image {
     position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
+    top: 0px;
+    left: 0px;
+    bottom: 0px;
     background-size: cover;
     display: block;
-    background-position: 50% 0;
+    background-position: 50% 0%;
 }
 }
 
 /*To position the list items in footer*/
 .hero-image-footer {
     position: absolute;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     padding: 25px 50px;
     background-color: rgba(56, 55, 55, 0.5);
@@ -83,8 +83,8 @@ body {
     font-size: 10px;
     color: #fff;
     list-style: none;
-    padding: 0;
-    margin: 0;
+    padding: 0px;
+    margin: 0px;
 }
 
 .social-list > li > a {
@@ -95,7 +95,7 @@ body {
 /*To make list horizontal & next to each other in footer*/
 .social-list > li {
     display: inline-block;
-    margin: 0 0 0 30px;
+    margin: 0px 0px 0px 30px;
 }
 
 /* For Desktop*/
@@ -124,7 +124,7 @@ body {
 
 .personal-section {
     background-color: #ffffff;
-    background-position: 50% 0;
+    background-position: 50% 0%;
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
@@ -172,7 +172,7 @@ body {
 }
 
 /* For Mobile*/
-@media (min-width: 300){
+@media (min-width: 300px){
 .col-sm-12 {
     width: 100%;
 }
@@ -211,9 +211,7 @@ h1, .about-heading {
 .bullet {
     display: flex;
     padding-bottom: 10px;
-    -webkit-box-align: start;
     align-items: flex-start;
-    
 }
 
 .bullet-icon{
@@ -221,12 +219,8 @@ h1, .about-heading {
     width: 25px;
     height: 25px;
     margin-right: 10px;
-    -webkit-box-pack: center;
     justify-content: center;
     align-items: center;
-    -webkit-box-align: center;
-    -webkit-box-flex: 0;
-    flex: 0 0 auto;
     border: 1px solid #bfbfbf;
     border-radius: 35px;
     background-color: #fff;
@@ -298,8 +292,7 @@ h1, .about-heading {
 /* To style home page quote */
 .quote-container {
     padding-top: 0%;
-    padding-bottom: none;
-    margin-bottom: 0;
+    margin-bottom: 0px;
     font-size: x-small;
 }
 
@@ -319,7 +312,7 @@ h1, .about-heading {
 
 .hero-image-footer-mobile {
     position: relative;
-    bottom: 0;
+    bottom: 0px;
     width: 100%;
     padding-right: 20px;
     padding-left: 0px;
@@ -350,8 +343,8 @@ h1, .about-heading {
 /* ----------------------------------------Portfolio Page */
 
 .portfolio-text-container{
-    padding-left: 0;
-    padding-right: 0;
+    padding-left: 0px;
+    padding-right: 0px;
     text-align: center;
 }
 
@@ -408,19 +401,20 @@ h1, .about-heading {
 }
 
 .list-inline-item:not(:last-child) {
-    margin-right: 0;
+    margin-right: 0px;
 }
+
 .menucontainer {
-    font-size: 0;
+    font-size: 0px;
 }
 
 #nav {
-    margin: 0;
+    margin: 0px;
 }
 
 #nav li{
     font-size: 14px;
-    padding: 0;
+    padding: 0px;
 }
 
 .nav-container{
@@ -431,7 +425,7 @@ h1, .about-heading {
 .menu-item {
     height: 120px;
     text-align: center;
-    padding: 0;
+    padding: 0px;
 }
 
 .menu-item a {
@@ -444,7 +438,7 @@ h1, .about-heading {
 .menu-item-dark {
     height: 120px;
     text-align: center;
-    padding: 0;
+    padding: 0px;
 }
 
 .menu-item-dark a {
@@ -460,7 +454,7 @@ h1, .about-heading {
     padding-top: 50px;
     text-align: center;
     font-size: 15px;
-    font-weight: 300;
+    font-weight: 300px;
 }
 
 .menu-item-dark span {
@@ -469,7 +463,7 @@ h1, .about-heading {
     padding-top: 50px;
     text-align: center;
     font-size: 15px;
-    font-weight: 300;
+    font-weight: 300px;
 }
 
 /* ----------------------------------------About Page */
@@ -504,10 +498,6 @@ h1, .about-heading {
 
 .project-timeline-heading {
     position: relative;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 auto;
-    -ms-flex: 0 auto;
-    flex: 0 auto;
     color: #636363;
     font-size: 15px;
     line-height: 15px;
@@ -519,10 +509,6 @@ h1, .about-heading {
 @media (min-width: 500px) and (max-width: 900px){
     .project-timeline-heading {
     position: relative;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 auto;
-    -ms-flex: 0 auto;
-    flex: 0 auto;
     color: #636363;
     font-size: 16px;
     line-height: 15px;
@@ -536,10 +522,6 @@ h1, .about-heading {
 @media (min-width: 990px){
     .project-timeline-heading {
     position: relative;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 auto;
-    -ms-flex: 0 auto;
-    flex: 0 auto;
     color: #636363;
     font-size: 16px;
     line-height: 15px;
@@ -554,7 +536,6 @@ h1, .about-heading {
     margin-top: 50px;
     margin-left: -20px;
     background-color: transparent;
-    background-image: -webkit-gradient(linear, left top, right top, color-stop(1%, hsla(0, 0%, 86.7%, 0)), color-stop(12%, #ddd));
     background-image: linear-gradient(90deg, hsla(0, 0%, 86.7%, 0) 1%, #ddd 12%);
 }
 
@@ -567,8 +548,7 @@ h1, .about-heading {
     border: 7px solid #fff;
     border-style: none;
     border-radius: 100px;
-    box-shadow: 0 1px 5px 0 #c4c2c2;
-    transition: box-shadow 300ms ease, transform 300ms ease, -webkit-transform 300ms ease;
+    box-shadow: 0px 1px 5px 0px #c4c2c2;
     margin-right: 1%;
     margin-left: 2%;
 }
@@ -578,15 +558,15 @@ h1, .about-heading {
 }
 
 .list-group {
-    padding-left: 0;
-    margin-bottom: 0;
+    padding-left: 0px;
+    margin-bottom: 0px;
     border-radius: 1px;
     flex-direction: row;
 }
 
 .list-group-item.active {
     z-index: 2;
-    color: #fff;
+    color: #cccccc;
     border-color: #316879;
     background-color: #fff;
     
@@ -634,10 +614,6 @@ h1, .about-heading {
 
 .timeline-year {
     position: relative;
-    -webkit-box-flex: 0;
-    -webkit-flex: 0 auto;
-    -ms-flex: 0 auto;
-    flex: 0 auto;
     color: #636363;
     font-size: 10px;
     line-height: 15px;
@@ -662,7 +638,6 @@ h1, .about-heading {
     position: relative;
     display: block;
     padding:15px;
-    
     text-decoration: none;
 }
 
@@ -697,11 +672,10 @@ h1, .about-heading {
     margin-right: 10px;
     justify-content: center;
     align-items: center;
-    flex: 0 0 auto;
-    border: 6px solid #fff;
+    border: 1px solid rgb(241, 241, 241);
     border-radius: 50%;
     background-color: #fff;
-    box-shadow: 0 1px 5px 0 #bfbfbf
+    box-shadow: 0px 1px 5px 0px #bfbfbf
 }
 
 .bullet-qual-text {
@@ -739,14 +713,28 @@ h1, .about-heading {
 /* ----------------------------------------Contact Page */
 
 .form-container{
-    
     padding-left: 5%;
     padding-right: 5%;
+}
+
+/*To move form down on larger screen*/
+/*For Desktop*/
+@media screen and (min-width: 990px){
+.form-container{
+    padding-top: 20%;
+}
 }
 
 .contact-btn-container{
     position: relative;
     padding-top: 2%;
+}
+
+/*For Desktop*/
+@media screen and (min-width: 990px){
+.contact-btn-container{
+    padding-top: 10%;
+}
 }
 
 #contact-btn{
@@ -765,27 +753,3 @@ h1, .about-heading {
     background: rgba(0,0,0,0.2);
     height: 120px;
 }
-
-
-
-/* ----------------------------------------Media Queries */
-
-
-
-
-
-@media screen and (min-width: 768px){
-.form-container{
-    padding-top: 20% ;
-}
-}
-
-
-@media screen and (min-width: 768px){
-.center-btn {
-    padding-top: 2%;
-    -ms-transform: translateX(0%);
-    transform: translateX(0%);
-}
-}
-
