--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -454,7 +454,7 @@ h2, .about-heading {
     padding-top: 50px;
     text-align: center;
     font-size: 15px;
-    font-weight: 300px;
+    font-weight: 300;
 }
 
 .menu-item-dark span {
@@ -463,7 +463,7 @@ h2, .about-heading {
     padding-top: 50px;
     text-align: center;
     font-size: 15px;
-    font-weight: 300px;
+    font-weight: 300;
 }
 
 /* ----------------------------------------About Page */
