--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,6 +8,7 @@ body {
     font-size: 15px;
     color: #898989;
     overflow-x: hidden;
+    margin-bottom: 10%;
 }
 
 /* ----------------------------------------Hero Image */
