Add scroll effect for site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,10 @@ body {
     margin-bottom: 10%;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 /* ----------------------------------------Hero Image */
 
 .hero-image-mobile {
